<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">entrance helper</string>

    <string name="main_activity_round_button_text_teacher">teacher</string>
    <string name="main_activity_round_button_text_student">student</string>
    <string name="main_activity_button_text_enter">continue</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="teacher_settings_export_button">export</string>
    <string name="teacher_settings_import_button">import</string>
    <string name="teacher_settings_change_mode_text">you are not teacher?</string>
    <string name="student_settings_change_mode_text">you are not learner?</string>
    <string name="delete_cross" translatable="false">X</string>
    <string name="delete_button_text">delete</string>
    <string name="import_button_text">import</string>
    <string name="share_button_text">share</string>

    <string name="no_code_text">code was not entered</string>
    <string name="no_name_text">name was not entered</string>
    <string name="save_button_text">save</string>
    <string name="student_settings_id_edit_text">moskvenok id</string>
    <string name="student_settings_surname_edit_text">full name</string>
    <string name="version" translatable="false">v 1.0</string>
    <string name="teacher_settings_share_data_text">share data</string>
    <string name="teacher_settings_import_data_text">import data base</string>
    <string name="main_activity_round_title_text_teacher">how do you want to use the app?</string>
    <string name="student_main_page_button_text">Settings</string>
    <string name="student_menu_button_settings_text">Settings</string>
    <string name="out_list_element_text_name" translatable="false"><![CDATA[<name example>]]></string>
    <string name="teacher_menu_clear_button_text">Clear</string>
    <string name="teacher_menu_settings_button_text">Settings</string>
    <string name="teacher_menu_share_button_text">Share</string>
    <string name="out_list_element_text_id" translatable="false"><![CDATA[<code example>]]></string>
    <string name="teacher_out_list_element_name_text">name</string>
    <string name="teacher_out_list_element_id_text" translatable="false">id</string>
    <string name="teacher_out_list_element_name_text_error">no student in database</string>
    <string name="cell_text_enter">enter</string>
    <string name="cell_text_corpus">school №1852</string>
    <string name="teacher_settings_toast_text_import_permission">to open file permission needed</string>
    <string name="teacher_toast_text_invalid_qr_code">invalid qr code</string>
    <string name="teacher_settings_toast_text_sd_card_access">sd card not available</string>
    <string name="teacher_settings_toast_text_file_format">xls file is required</string>
    <string name="teacher_settings_toast_text_import_error">import error</string>

<!--    dialog-->
    <string name="settings_delete_dialog_text">All information will be delete. Do you want to continue?</string>
    <string name="settings_delete_dialog_title">delete</string>


</resources>
