<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:actionMenuTextAppearance="@style/MyToolbarStyle">

    <item
        android:id="@+id/activity_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="1"
        android:title="@string/teacher_menu_share_button_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/activity_settings"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="2"
        android:title="@string/teacher_menu_settings_button_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/activity_clear"
        android:orderInCategory="3"
        android:title="@string/teacher_menu_clear_button_text"
        app:showAsAction="never" />


</menu>